test/functions/vass/report-unresolved-case.chpl

for idx in 5.these(iterKind.standalone) do
  writeln(idx);
